--- a/public/amazon.html
+++ b/public/amazon.html
@@ -46,7 +46,7 @@
     </div>
     
     <div class="main">
-      <div class="products-grid js-product-container">
+      <div class="proizvodi-grid js-product-container">
         
       </div>
     </div>
