Working version, style/logo changes

--- a/public/tracking.html
+++ b/public/tracking.html
@@ -22,10 +22,10 @@
     <div class="amazon-header">
       <div class="amazon-header-left-section">
         <a href="amazon.html" class="header-link">
-          <img class="amazon-logo"
-            src="slike/amazon-logo-white.png">
-          <img class="amazon-mobile-logo"
-            src="slike/amazon-mobile-logo-white.png">
+          <img class="logo-black"
+            src="slike/logo-white.png">
+          <img class="logo-black-mobile"
+            src="slike/logo-white-mobile.png">
         </a>
       </div>
 
