Changed UI to serbian, working on dayjs translation of dates

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Checkout</title>
+    <title>Stranica za naplatu</title>
 
     <!-- This code is needed for responsive design to work.
       (Responsive design = make the website look good on
@@ -22,9 +22,9 @@
     <div id="delete-confirm" class="confirm-hidden js-confirm-window">
       <div class="confirm-window">
         <div>
-          <p>Remove from cart?</p>
-          <button class="confirm-window-yes">Yes</button>
-          <button class="confirm-window-no">No</button>
+          <p>Izbrisi iz korpe?</p>
+          <button class="confirm-window-yes">Da</button>
+          <button class="confirm-window-no">Ne</button>
         </div>
       </div>
     </div>
@@ -34,7 +34,7 @@
     </div>
 
     <div class="main">
-      <div class="page-title">Review your order</div>
+      <div class="page-title">Trenutno u korpi:</div>
 
       <div class="checkout-grid">
         <div class="order-summary">
