--- a/public/amazon.html
+++ b/public/amazon.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>E commerce</title>
+    <title>E market</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
       </div>
 
       <div class="amazon-header-middle-section">
-        <input class="search-bar js-search-bar" type="text" placeholder="Search">
+        <input class="search-bar js-search-bar" type="text" placeholder="Pretraži">
 
         <button class="search-button js-search-button">
           <img class="search-icon" src="slike/ikonice/search-icon.png">
@@ -33,14 +33,14 @@
 
       <div class="amazon-header-right-section">
         <a class="orders-link header-link" href="/orders">
-          <span class="returns-text">Returns</span>
-          <span class="orders-text">& Orders</span>
+          <span class="returns-text">Poručeni</span>
+          <span class="orders-text">Proizvodi</span>
         </a>
 
         <a class="cart-link header-link" href="/checkout">
           <img class="cart-icon" src="slike/ikonice/cart-icon.png">
           <div class="cart-quantity js-cart-quantity"></div>
-          <div class="cart-text">Cart</div>
+          <div class="cart-text">Korpa</div>
         </a>
       </div>
     </div>
