--- a/public/tracking.html
+++ b/public/tracking.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tracking</title>
+    <title>Praćenje paketa</title>
 
     <!-- This code is needed for responsive design to work.
       (Responsive design = make the website look good on
@@ -30,7 +30,7 @@
       </div>
 
       <div class="amazon-header-middle-section">
-        <input class="search-bar" type="text" placeholder="Search">
+        <input class="search-bar" type="text" placeholder="Pretraži">
 
         <button class="search-button">
           <img class="search-icon" src="slike/ikonice/search-icon.png">
@@ -39,14 +39,14 @@
 
       <div class="amazon-header-right-section">
         <a class="orders-link header-link" href="orders.html">
-          <span class="returns-text">Returns</span>
-          <span class="orders-text">& Orders</span>
+          <span class="returns-text">Poručeni</span>
+          <span class="orders-text">Proizvodi</span>
         </a>
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="slike/ikonice/cart-icon.png">
           <div class="cart-quantity js-cart-quantity"></div>
-          <div class="cart-text">Cart</div>
+          <div class="cart-text">Korpa</div>
         </a>
       </div>
     </div>
