market zaglajve dodato

--- a/public/amazon.html
+++ b/public/amazon.html
@@ -9,12 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/shared/general.css">
-    <link rel="stylesheet" href="styles/shared/amazon-header.css">
+    <link rel="stylesheet" href="styles/shared/market-zaglavlje.css">
     <link rel="stylesheet" href="styles/pages/amazon.css">
   </head>
   <body>
-    <div class="amazon-header">
-      <div class="amazon-header-left-section">
+    <div class="market-zaglavlje">
+      <div class="market-zaglavlje-left-section">
         <a href="/" class="header-link">
           <img class="logo-black"
             src="slike/logo-white.png">
@@ -23,7 +23,7 @@
         </a>
       </div>
 
-      <div class="amazon-header-middle-section">
+      <div class="market-zaglavlje-middle-section">
         <input class="search-bar js-search-bar" type="text" placeholder="Pretraži">
 
         <button class="search-button js-search-button">
@@ -31,7 +31,7 @@
         </button>
       </div>
 
-      <div class="amazon-header-right-section">
+      <div class="market-zaglavlje-right-section">
         <a class="orders-link header-link" href="/orders">
           <span class="returns-text">Poručeni</span>
           <span class="orders-text">Proizvodi</span>
