--- a/public/tracking.html
+++ b/public/tracking.html
@@ -15,12 +15,12 @@
 
     <!-- Here are the CSS files for this page. -->
     <link rel="stylesheet" href="styles/shared/general.css">
-    <link rel="stylesheet" href="styles/shared/amazon-header.css">
+    <link rel="stylesheet" href="styles/shared/market-zaglavlje.css">
     <link rel="stylesheet" href="styles/pages/tracking.css">
   </head>
   <body>
-    <div class="amazon-header">
-      <div class="amazon-header-left-section">
+    <div class="market-zaglavlje">
+      <div class="market-zaglavlje-left-section">
         <a href="amazon.html" class="header-link">
           <img class="logo-black"
             src="slike/logo-white.png">
@@ -29,7 +29,7 @@
         </a>
       </div>
 
-      <div class="amazon-header-middle-section">
+      <div class="market-zaglavlje-middle-section">
         <input class="search-bar" type="text" placeholder="Pretraži">
 
         <button class="search-button">
@@ -37,7 +37,7 @@
         </button>
       </div>
 
-      <div class="amazon-header-right-section">
+      <div class="market-zaglavlje-right-section">
         <a class="orders-link header-link" href="orders.html">
           <span class="returns-text">Poručeni</span>
           <span class="orders-text">Proizvodi</span>
