--- a/public/amazon.html
+++ b/public/amazon.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles/shared/general.css">
-    <link rel="stylesheet" href="styles/shared/market-zaglavlje.css">
-    <link rel="stylesheet" href="styles/pages/amazon.css">
+    <link rel="stylesheet" href="stilovi/zajednicki/generalni-stil.css">
+    <link rel="stylesheet" href="stilovi/zajednicki/market-zaglavlje.css">
+    <link rel="stylesheet" href="stilovi/stranice/market.css">
   </head>
   <body>
     <div class="market-zaglavlje">
