--- a/public/tracking.html
+++ b/public/tracking.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <div class="market-zaglavlje">
-      <div class="market-zaglavlje-left-section">
-        <a href="amazon.html" class="header-link">
+      <div class="market-zaglavlje-leva-sekcija">
+        <a href="market.html" class="zaglavlje-link">
           <img class="logo-black"
             src="slike/logo-white.png">
           <img class="logo-black-mobile"
@@ -38,12 +38,12 @@
       </div>
 
       <div class="market-zaglavlje-right-section">
-        <a class="orders-link header-link" href="orders.html">
+        <a class="orders-link zaglavlje-link" href="orders.html">
           <span class="returns-text">Poručeni</span>
           <span class="orders-text">Proizvodi</span>
         </a>
 
-        <a class="cart-link header-link" href="checkout.html">
+        <a class="cart-link zaglavlje-link" href="checkout.html">
           <img class="cart-icon" src="slike/ikonice/cart-icon.png">
           <div class="cart-quantity js-cart-quantity"></div>
           <div class="cart-text">Korpa</div>
