--- a/public/orders.html
+++ b/public/orders.html
@@ -22,10 +22,10 @@
     <div class="market-zaglavlje">
       <div class="market-zaglavlje-leva-sekcija">
         <a href="/" class="zaglavlje-link">
-          <img class="logo-black"
-            src="slike/logo-white.png">
-          <img class="logo-black-mobile"
-            src="slike/logo-white-mobile.png">
+          <img class="beli-logo"
+            src="slike/beli-logo.png">
+          <img class="beli-logo-telefon"
+            src="slike/beli-logo-telefon.png">
         </a>
       </div>
 
