--- a/public/market.html
+++ b/public/market.html
@@ -23,8 +23,8 @@
         </a>
       </div>
 
-      <div class="market-zaglavlje-middle-section">
-        <input class="search-bar js-search-bar" type="text" placeholder="Pretraži">
+      <div class="market-zaglavlje-srednja-sekcija">
+        <input class="traka-za-pretragu js-traka-za-pretragu" type="text" placeholder="Pretraži">
 
         <button class="search-button js-search-button">
           <img class="search-icon" src="slike/ikonice/search-icon.png">
