--- a/public/orders.html
+++ b/public/orders.html
@@ -29,8 +29,8 @@
         </a>
       </div>
 
-      <div class="market-zaglavlje-middle-section">
-        <input class="search-bar" type="text" placeholder="Pretraži">
+      <div class="market-zaglavlje-srednja-sekcija">
+        <input class="traka-za-pretragu" type="text" placeholder="Pretraži">
 
         <button class="search-button">
           <img class="search-icon" src="slike/ikonice/search-icon.png">
