--- a/public/market.html
+++ b/public/market.html
@@ -26,8 +26,8 @@
       <div class="market-zaglavlje-srednja-sekcija">
         <input class="traka-za-pretragu js-traka-za-pretragu" type="text" placeholder="Pretraži">
 
-        <button class="search-button js-search-button">
-          <img class="search-icon" src="slike/ikonice/search-icon.png">
+        <button class="dugme-za-pretragu js-dugme-za-pretragu">
+          <img class="search-icon" src="slike/ikonice/ikonica-pretraga.png">
         </button>
       </div>
 
