--- a/public/tracking.html
+++ b/public/tracking.html
@@ -32,8 +32,8 @@
       <div class="market-zaglavlje-srednja-sekcija">
         <input class="traka-za-pretragu" type="text" placeholder="Pretraži">
 
-        <button class="search-button">
-          <img class="search-icon" src="slike/ikonice/search-icon.png">
+        <button class="dugme-za-pretragu">
+          <img class="search-icon" src="slike/ikonice/ikonica-pretraga.png">
         </button>
       </div>
 
