--- a/public/market.html
+++ b/public/market.html
@@ -27,12 +27,12 @@
         <input class="traka-za-pretragu js-traka-za-pretragu" type="text" placeholder="Pretraži">
 
         <button class="dugme-za-pretragu js-dugme-za-pretragu">
-          <img class="search-icon" src="slike/ikonice/ikonica-pretraga.png">
+          <img class="ikonica-pretraga" src="slike/ikonice/ikonica-pretraga.png">
         </button>
       </div>
 
-      <div class="market-zaglavlje-right-section">
-        <a class="orders-link zaglavlje-link" href="/orders">
+      <div class="market-zaglavlje-desna-sekcija">
+        <a class="porudzbine-link zaglavlje-link" href="/orders">
           <span class="returns-text">Poručeni</span>
           <span class="orders-text">Proizvodi</span>
         </a>
