--- a/public/market.html
+++ b/public/market.html
@@ -32,7 +32,7 @@
       </div>
 
       <div class="market-zaglavlje-desna-sekcija">
-        <a class="porudzbine-link zaglavlje-link" href="/orders">
+        <a class="porudzbine-link zaglavlje-link" href="/porudzbenice">
           <span class="returns-text">Poručeni</span>
           <span class="orders-text">Proizvodi</span>
         </a>
