--- a/public/porudzbenice.html
+++ b/public/porudzbenice.html
@@ -16,7 +16,7 @@
     <!-- Here are the CSS files for this page. -->
     <link rel="stylesheet" href="stilovi/zajednicki/generalni-stil.css">
     <link rel="stylesheet" href="stilovi/zajednicki/market-zaglavlje.css">
-    <link rel="stylesheet" href="stilovi/stranice/orders.css">
+    <link rel="stylesheet" href="stilovi/stranice/porudzbenice.css">
   </head>
   <body>
     <div class="market-zaglavlje">
@@ -38,7 +38,7 @@
       </div>
 
       <div class="market-zaglavlje-desna-sekcija">
-        <a class="porudzbine-link zaglavlje-link" href="/orders">
+        <a class="porudzbine-link zaglavlje-link" href="/porudzbenice">
           <span class="returns-text">Poručeni</span>
           <span class="orders-text">Proizvodi</span>
         </a>
@@ -58,6 +58,6 @@
        
       </div>
     </div>
-    <script src="./scripts/returnAndOrders/orders.js" type="module"></script>
+    <script src="./scripts/returnAndOrders/porudzbenice.js" type="module"></script>
   </body>
 </html>
