--- a/public/tracking.html
+++ b/public/tracking.html
@@ -39,11 +39,11 @@
 
       <div class="market-zaglavlje-desna-sekcija">
         <a class="porudzbine-link zaglavlje-link" href="orders.html">
-          <span class="returns-text">Poručeni</span>
-          <span class="orders-text">Proizvodi</span>
+          <span class="poruceni-text">Poručeni</span>
+          <span class="proizvodi-text">Proizvodi</span>
         </a>
 
-        <a class="cart-link zaglavlje-link" href="checkout.html">
+        <a class="korpa-link zaglavlje-link" href="checkout.html">
           <img class="cart-icon" src="slike/ikonice/cart-icon.png">
           <div class="cart-quantity js-cart-quantity"></div>
           <div class="cart-text">Korpa</div>
