Naplata renamed finish

--- a/public/market.html
+++ b/public/market.html
@@ -37,7 +37,7 @@
           <span class="proizvodi-text">Proizvodi</span>
         </a>
 
-        <a class="korpa-link zaglavlje-link" href="/checkout">
+        <a class="korpa-link zaglavlje-link" href="/naplata">
           <img class="cart-icon" src="slike/ikonice/cart-icon.png">
           <div class="cart-quantity js-cart-quantity"></div>
           <div class="cart-text">Korpa</div>
