--- a/public/naplata.html
+++ b/public/naplata.html
@@ -15,8 +15,8 @@
 
     <!-- Here are the CSS files for this page. -->
     <link rel="stylesheet" href="stilovi/zajednicki/generalni-stil.css">
-    <link rel="stylesheet" href="stilovi/stranice/checkout/checkout-header.css">
-    <link rel="stylesheet" href="stilovi/stranice/checkout/checkout.css">
+    <link rel="stylesheet" href="stilovi/stranice/naplata/naplata-zaglavlje.css">
+    <link rel="stylesheet" href="stilovi/stranice/naplata/naplata.css">
   </head>
   <body>
     <div id="delete-confirm" class="confirm-hidden js-confirm-window">
@@ -46,6 +46,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="./checkout.js"></script>
+    <script type="module" src="./naplata.js"></script>
   </body>
 </html>
