Fixed some isssues

--- a/public/market.html
+++ b/public/market.html
@@ -38,7 +38,7 @@
         </a>
 
         <a class="korpa-link zaglavlje-link" href="/naplata">
-          <img class="cart-icon" src="slike/ikonice/cart-icon.png">
+          <img class="korpa-ikonica" src="slike/ikonice/korpa-ikonica.png">
           <div class="cart-quantity js-cart-quantity"></div>
           <div class="cart-text">Korpa</div>
         </a>
