--- a/public/tracking.html
+++ b/public/tracking.html
@@ -38,13 +38,13 @@
       </div>
 
       <div class="market-zaglavlje-desna-sekcija">
-        <a class="porudzbine-link zaglavlje-link" href="orders.html">
+        <a class="porudzbine-link zaglavlje-link" href="/porudzbenice">
           <span class="poruceni-text">Poručeni</span>
           <span class="proizvodi-text">Proizvodi</span>
         </a>
 
-        <a class="korpa-link zaglavlje-link" href="checkout.html">
-          <img class="cart-icon" src="slike/ikonice/cart-icon.png">
+        <a class="korpa-link zaglavlje-link" href="/naplata">
+          <img class="korpa-ikonica" src="slike/ikonice/korpa-ikonica.png">
           <div class="cart-quantity js-cart-quantity"></div>
           <div class="cart-text">Korpa</div>
         </a>
