--- a/public/market.html
+++ b/public/market.html
@@ -33,14 +33,14 @@
 
       <div class="market-zaglavlje-desna-sekcija">
         <a class="porudzbine-link zaglavlje-link" href="/porudzbenice">
-          <span class="poruceni-text">Poručeni</span>
-          <span class="proizvodi-text">Proizvodi</span>
+          <span class="poruceni-tekst">Poručeni</span>
+          <span class="proizvodi-tekst">Proizvodi</span>
         </a>
 
         <a class="korpa-link zaglavlje-link" href="/naplata">
           <img class="korpa-ikonica" src="slike/ikonice/korpa-ikonica.png">
-          <div class="cart-quantity js-cart-quantity"></div>
-          <div class="cart-text">Korpa</div>
+          <div class="kolicina-u-kolicima js-kolicina-u-kolicima"></div>
+          <div class="korpa-tekst">Korpa</div>
         </a>
       </div>
     </div>
