Verzija radna main

--- a/public/market.html
+++ b/public/market.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     
-    <div class="main">
+    <div class="glavni-sadrzaj">
       <div class="proizvodi-grid js-product-container">
         
       </div>
