--- a/public/naplata.html
+++ b/public/naplata.html
@@ -33,7 +33,7 @@
       
     </div>
 
-    <div class="main">
+    <div class="glavni-sadrzaj">
       <div class="page-title">Trenutno u korpi:</div>
 
       <div class="checkout-grid">
