--- a/public/porudzbenice.html
+++ b/public/porudzbenice.html
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div class="main">
+    <div class="glavni-sadrzaj">
       <div class="page-title">Vaše porudžbine</div>
 
       <div class="orders-grid js-orders-grid">
