--- a/public/tracking.html
+++ b/public/tracking.html
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div class="main">
+    <div class="glavni-sadrzaj">
       
     </div>
     <script src="./scripts/returnAndOrders/tracking.js" type="module"></script>
