--- a/public/naplata.html
+++ b/public/naplata.html
@@ -19,12 +19,12 @@
     <link rel="stylesheet" href="stilovi/stranice/naplata/naplata.css">
   </head>
   <body>
-    <div id="delete-confirm" class="confirm-hidden js-confirm-window">
-      <div class="confirm-window">
+    <div id="potvrdi-brisanje" class="potvrdi-skriveno js-potvrdi-prozor">
+      <div class="potvrdi-prozor">
         <div>
           <p>Izbrisi iz korpe?</p>
-          <button class="confirm-window-yes">Da</button>
-          <button class="confirm-window-no">Ne</button>
+          <button class="potvrdi-prozor-da">Da</button>
+          <button class="potvrdi-prozor-ne">Ne</button>
         </div>
       </div>
     </div>
