--- a/public/naplata.html
+++ b/public/naplata.html
@@ -29,12 +29,12 @@
       </div>
     </div>
 
-    <div class="checkout-header js-checkout-header">
+    <div class="naplata-zaglavlje js-naplata-zaglavlje">
       
     </div>
 
     <div class="glavni-sadrzaj">
-      <div class="page-title">Trenutno u korpi:</div>
+      <div class="naslov-stranice">Trenutno u korpi:</div>
 
       <div class="checkout-grid">
         <div class="order-summary">
