--- a/public/porudzbenice.html
+++ b/public/porudzbenice.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="glavni-sadrzaj">
-      <div class="page-title">Vaše porudžbine</div>
+      <div class="naslov-stranice">Vaše porudžbine</div>
 
       <div class="orders-grid js-orders-grid">
        
