--- a/public/naplata.html
+++ b/public/naplata.html
@@ -36,12 +36,12 @@
     <div class="glavni-sadrzaj">
       <div class="naslov-stranice">Trenutno u korpi:</div>
 
-      <div class="checkout-grid">
-        <div class="order-summary">
+      <div class="naplata-grid">
+        <div class="pregled-porudzbine">
           
         </div>
 
-        <div class="payment-summary js-payment-summary">
+        <div class="pregled-naplate js-pregled-naplate">
           
         </div>
       </div>
