--- a/public/porudzbenice.html
+++ b/public/porudzbenice.html
@@ -54,7 +54,7 @@
     <div class="glavni-sadrzaj">
       <div class="naslov-stranice">Vaše porudžbine</div>
 
-      <div class="orders-grid js-orders-grid">
+      <div class="porudzbine-gird js-porudzbine-gird">
        
       </div>
     </div>
