--- a/public/porudzbine.html
+++ b/public/porudzbine.html
@@ -16,7 +16,7 @@
     <!-- Here are the CSS files for this page. -->
     <link rel="stylesheet" href="stilovi/zajednicki/generalni-stil.css">
     <link rel="stylesheet" href="stilovi/zajednicki/market-zaglavlje.css">
-    <link rel="stylesheet" href="stilovi/stranice/porudzbenice.css">
+    <link rel="stylesheet" href="stilovi/stranice/porudzbine.css">
   </head>
   <body>
     <div class="market-zaglavlje">
@@ -38,7 +38,7 @@
       </div>
 
       <div class="market-zaglavlje-desna-sekcija">
-        <a class="porudzbine-link zaglavlje-link" href="/porudzbenice">
+        <a class="porudzbine-link zaglavlje-link" href="/porudzbine">
           <span class="poruceni-tekst">Poručeni</span>
           <span class="proizvodi-tekst">Proizvodi</span>
         </a>
@@ -58,6 +58,6 @@
        
       </div>
     </div>
-    <script src="./scripts/poruceniProizvodi/porudzbenice.js" type="module"></script>
+    <script src="./scripts/poruceniProizvodi/porudzbine.js" type="module"></script>
   </body>
 </html>
