--- a/public/tracking.html
+++ b/public/tracking.html
@@ -38,7 +38,7 @@
       </div>
 
       <div class="market-zaglavlje-desna-sekcija">
-        <a class="porudzbine-link zaglavlje-link" href="/porudzbenice">
+        <a class="porudzbine-link zaglavlje-link" href="/porudzbine">
           <span class="poruceni-tekst">Poručeni</span>
           <span class="proizvodi-tekst">Proizvodi</span>
         </a>
