--- a/opstifolder/naplata.html
+++ b/opstifolder/naplata.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <!-- Here are the CSS files for this page. -->
+    <!-- CSS FAJLOVI -->
     <link rel="stylesheet" href="stilovi/zajednicki/generalni-stil.css">
     <link rel="stylesheet" href="stilovi/stranice/naplata/naplata-zaglavlje.css">
     <link rel="stylesheet" href="stilovi/stranice/naplata/naplata.css">
