--- a/opstifolder/market.html
+++ b/opstifolder/market.html
@@ -52,6 +52,6 @@
     </div>
     
     <script type="module" src="./market.js"></script> 
-    <!-- modules work only on live server -->
+    <!-- moduli jedino funkcionisu na 'live' serverima -->
   </body>
 </html>
