--- a/opstifolder/naplata.html
+++ b/opstifolder/naplata.html
@@ -22,7 +22,7 @@
     <div id="potvrdi-brisanje" class="potvrdi-skriveno js-potvrdi-prozor">
       <div class="potvrdi-prozor">
         <div>
-          <p>Izbrisi iz korpe?</p>
+          <p>Izbriši iz korpe?</p>
           <button class="potvrdi-prozor-da">Da</button>
           <button class="potvrdi-prozor-ne">Ne</button>
         </div>
