--- a/opstifolder/market.html
+++ b/opstifolder/market.html
@@ -39,7 +39,7 @@
 
         <a class="korpa-link zaglavlje-link" href="/naplata">
           <img class="korpa-ikonica" src="slike/ikonice/korpa-ikonica.png">
-          <div class="kolicina-u-kolicima js-kolicina-u-kolicima"></div>
+          <div class="količina-u-kolicima js-količina-u-kolicima"></div>
           <div class="korpa-tekst">Korpa</div>
         </a>
       </div>
