Serbian language fix source code

--- a/opstifolder/market.html
+++ b/opstifolder/market.html
@@ -33,7 +33,7 @@
 
       <div class="market-zaglavlje-desna-sekcija">
         <a class="porudzbine-link zaglavlje-link" href="/porudzbine">
-          <span class="poruceni-tekst">Poručeni</span>
+          <span class="poručeni-tekst">Poručeni</span>
           <span class="proizvodi-tekst">Proizvodi</span>
         </a>
 
@@ -45,7 +45,7 @@
       </div>
     </div>
     
-    <div class="glavni-sadrzaj">
+    <div class="glavni-sadržaj">
       <div class="proizvodi-grid js-proizvodi-kontejner">
         
       </div>
