--- a/opstifolder/naplata.html
+++ b/opstifolder/naplata.html
@@ -33,7 +33,7 @@
       
     </div>
 
-    <div class="glavni-sadrzaj">
+    <div class="glavni-sadržaj">
       <div class="naslov-stranice">Trenutno u korpi:</div>
 
       <div class="naplata-grid">
