--- a/opstifolder/porudzbine.html
+++ b/opstifolder/porudzbine.html
@@ -35,7 +35,7 @@
 
       <div class="market-zaglavlje-desna-sekcija">
         <a class="porudzbine-link zaglavlje-link" href="/porudzbine">
-          <span class="poruceni-tekst">Poručeni</span>
+          <span class="poručeni-tekst">Poručeni</span>
           <span class="proizvodi-tekst">Proizvodi</span>
         </a>
 
@@ -47,13 +47,13 @@
       </div>
     </div>
 
-    <div class="glavni-sadrzaj">
+    <div class="glavni-sadržaj">
       <div class="naslov-stranice">Vaše porudžbine</div>
 
       <div class="porudzbine-gird js-porudzbine-gird">
        
       </div>
     </div>
-    <script src="./skripte/poruceniProizvodi/porudzbine.js" type="module"></script>
+    <script src="./skripte/poručeniProizvodi/porudzbine.js" type="module"></script>
   </body>
 </html>
