--- a/opstifolder/pracenje.html
+++ b/opstifolder/pracenje.html
@@ -35,7 +35,7 @@
 
       <div class="market-zaglavlje-desna-sekcija">
         <a class="porudzbine-link zaglavlje-link" href="/porudzbine">
-          <span class="poruceni-tekst">Poručeni</span>
+          <span class="poručeni-tekst">Poručeni</span>
           <span class="proizvodi-tekst">Proizvodi</span>
         </a>
 
@@ -47,9 +47,9 @@
       </div>
     </div>
 
-    <div class="glavni-sadrzaj">
+    <div class="glavni-sadržaj">
       
     </div>
-    <script src="./skripte/poruceniProizvodi/pracenje.js" type="module"></script>
+    <script src="./skripte/poručeniProizvodi/pracenje.js" type="module"></script>
   </body>
 </html>
