--- a/opstifolder/naplata.html
+++ b/opstifolder/naplata.html
@@ -37,7 +37,7 @@
       <div class="naslov-stranice">Trenutno u korpi:</div>
 
       <div class="naplata-grid">
-        <div class="pregled-porudzbine">
+        <div class="pregled-porudžbine">
           
         </div>
 
