--- a/opstifolder/porudžbine.html
+++ b/opstifolder/porudžbine.html
@@ -12,7 +12,7 @@
     <!-- CSS FAJLOVI -->
     <link rel="stylesheet" href="stilovi/zajednicki/generalni-stil.css">
     <link rel="stylesheet" href="stilovi/zajednicki/market-zaglavlje.css">
-    <link rel="stylesheet" href="stilovi/stranice/porudzbine.css">
+    <link rel="stylesheet" href="stilovi/stranice/porudžbine.css">
   </head>
   <body>
     <div class="market-zaglavlje">
@@ -34,7 +34,7 @@
       </div>
 
       <div class="market-zaglavlje-desna-sekcija">
-        <a class="porudzbine-link zaglavlje-link" href="/porudzbine">
+        <a class="porudžbine-link zaglavlje-link" href="/porudžbine">
           <span class="poručeni-tekst">Poručeni</span>
           <span class="proizvodi-tekst">Proizvodi</span>
         </a>
@@ -50,10 +50,10 @@
     <div class="glavni-sadržaj">
       <div class="naslov-stranice">Vaše porudžbine</div>
 
-      <div class="porudzbine-gird js-porudzbine-gird">
+      <div class="porudžbine-gird js-porudžbine-gird">
        
       </div>
     </div>
-    <script src="./skripte/poručeniProizvodi/porudzbine.js" type="module"></script>
+    <script src="./skripte/poručeniProizvodi/porudžbine.js" type="module"></script>
   </body>
 </html>
