--- a/opstifolder/pracenje.html
+++ b/opstifolder/pracenje.html
@@ -34,12 +34,12 @@
       </div>
 
       <div class="market-zaglavlje-desna-sekcija">
-        <a class="porudžbine-link zaglavlje-link" href="/porudžbine">
+        <a class="porudžbine-link zaglavlje-link" href="/porudžbine.html">
           <span class="poručeni-tekst">Poručeni</span>
           <span class="proizvodi-tekst">Proizvodi</span>
         </a>
 
-        <a class="korpa-link zaglavlje-link" href="/naplata">
+        <a class="korpa-link zaglavlje-link" href="/naplata.html">
           <img class="korpa-ikonica" src="slike/ikonice/korpa-ikonica.png">
           <div class="količina-u-kolicima js-količina-u-kolicima"></div>
           <div class="korpa-tekst">Korpa</div>
